<resources>
    <string name="app_name">GroceryApp</string>
    <string name="app_logo_name">GroceryMart</string>
    <string name="reg_btn">Register</string>
    <string name="login_btn">Login</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="to_reg_txt">New User? </string>
    <string name="to_login_txt">Already registered? </string>
    <string name="click_text">Click here</string>
    <string name="no_data_text">There is no item in this category!</string>
    <string name="add_to_cart">Add to Cart</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>